--- a/gpfs.restit.spec.templ
+++ b/gpfs.restit.spec.templ
@@ -7,6 +7,7 @@ URL:            https://github.com/oli4vr
 BuildArch:      noarch
 BuildRoot:      %{_tmppath}/%{name}-build
 Requires:       gpfs.base
+Packager:       Olivier Van Rompuy <oli4vr@gmail.com>
 
 %description
 GPFS REST API health check sensor
@@ -40,3 +41,6 @@ chmod u+x /opt/gpfsrest
 chmod u+x /opt/gpfsrest
 /opt/gpfsrest/gpfsrest.sh -u
 
+%changelog
+* 2024 03 12 Olivier Van Rompuy <oli4vr@gmail.com>
+  - Initial creation of rpm spec file. The bundle can now be built as an rpm package.
