--- a/gpfs.restit.spec.templ
+++ b/gpfs.restit.spec.templ
@@ -42,5 +42,5 @@ chmod u+x /opt/gpfsrest
 /opt/gpfsrest/gpfsrest.sh -u
 
 %changelog
-* 2024 03 12 Olivier Van Rompuy <oli4vr@gmail.com>
+* Tue Mar 12 2024 Olivier Van Rompuy <oli4vr@gmail.com>
   - Initial creation of rpm spec file. The bundle can now be built as an rpm package.
