rpm pkg subname - fileset script improved

--- a/gpfs.restit.spec.templ
+++ b/gpfs.restit.spec.templ
@@ -1,4 +1,4 @@
-Name:           gpfs.restit
+Name:           gpfs.restit.__SUBNAME__
 Version:        0.2
 Release:        __RELEASE__
 Summary:        GPFS REST API health check sensor
