--- a/gpfs.restit.spec.templ
+++ b/gpfs.restit.spec.templ
@@ -1,5 +1,5 @@
 Name:           gpfs.restit.__SUBNAME__
-Version:        0.2
+Version:        0.3
 Release:        __RELEASE__
 Summary:        GPFS REST API health check sensor
 License:        GPL
@@ -15,6 +15,8 @@ GPFS REST API health check sensor
 %prep
 mkdir %{name}-%{version}
 cp %{_sourcedir}/gpfsrest.sh .
+cp %{_sourcedir}/fsetascii .
+cp %{_sourcedir}/mmhlascii .
 
 %build
 # Nothing to build
@@ -22,6 +24,9 @@ cp %{_sourcedir}/gpfsrest.sh .
 %install
 mkdir -p $RPM_BUILD_ROOT/opt/gpfsrest
 install -m 0700 gpfsrest.sh $RPM_BUILD_ROOT/opt/gpfsrest/
+mkdir -p $RPM_BUILD_ROOT/usr/lib/check_mk_agent/local
+install -m 0755 fsetascii $RPM_BUILD_ROOT/usr/lib/check_mk_agent/local/
+install -m 0755 mmhlascii $RPM_BUILD_ROOT/usr/lib/check_mk_agent/local/
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -32,6 +37,8 @@ rm -rf gpfsrest
 %files
 %defattr(-,root,root,-)
 /opt/gpfsrest/gpfsrest.sh
+/usr/lib/check_mk_agent/local/fsetascii
+/usr/lib/check_mk_agent/local/mmhlascii
 
 %post
 chmod u+x /opt/gpfsrest
@@ -42,5 +49,7 @@ chmod u+x /opt/gpfsrest
 /opt/gpfsrest/gpfsrest.sh -u
 
 %changelog
-* Tue Mar 12 2024 Olivier Van Rompuy <oli4vr@gmail.com>
+* Tue Mar 12 2024 Olivier Van Rompuy 
   - Initial creation of rpm spec file. The bundle can now be built as an rpm package.
+* Mon Mar 17 2025 Olivier Van Rompuy
+  - Added checkmk local scripts
