--- a/gpfs.restit.spec.templ
+++ b/gpfs.restit.spec.templ
@@ -6,7 +6,7 @@ License:        GPL
 URL:            https://github.com/oli4vr
 BuildArch:      noarch
 BuildRoot:      %{_tmppath}/%{name}-build
-Requires:       gpfs.base
+Requires:       gpfs.base, sed, curl, jq
 Packager:       Olivier Van Rompuy <oli4vr@gmail.com>
 
 %description
